--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <!--Navigation----------------------------------->
 	<nav>
 		<ul>
-			<li><a href="#Home">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="#Title2">Title2</a></li>
-			<li><a href="#Title3">History</a></li>
+			<li><a href="history.html">History</a></li>
 			<li><a href="#About">About</a></li>
 		</ul>
 	</nav>
@@ -36,12 +36,27 @@
 	<p>Expand your company by hiring employees. Manage your team and control the flow of creation as a tough boss or a sympathetic one.
 	As time and history progress you learn more about what type of games works well, while you try and grow to the top and make the best games of all.  </p>	
 </div>
+<!--Buttons for downloading------------------------------->
 	
+<!--Computer -->
 <section class="playnow">
-	<button class="play"><h3>Play Now</h3></button>
-	<button class="how"><h3>How to Play</h3></button>
-</section>
+	<button class="play" href="http://www.greenheartgames.com/game-dev-tycoon-downloads/">
+		<h3>Play Now on PC/Mac/Linux</h3>
+	</button>
 	
+<!--Android-->	
+	<button class="android" href="https://play.google.com/store/apps/details?id=com.greenheartgames.gdt">
+		<img src="img/Google_Play_Store_badge_EN.svg.png" width="200" alt="Google play logo"/>
+	</button>
+	
+<!--Apple store -->	
+	<button class="iOS" href="https://itunes.apple.com/us/app/game-dev-tycoon/id1162580001?ls=1&mt=8">
+		<img src="img/app-store-badge.svg" width="200px" alt="Appstore logo"/>
+	</button>
+	
+
+</section>
+	<button class="how">	<h3>How to Play</h3>	</button>
 </main>
 	
 <!--Fodliste med kontakter og links------------------------>
