--- a/index.html
+++ b/index.html
@@ -2,24 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
+	<!--Der indsættes en ny meta tag med viewport-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>exam2024</title>
 <link href="Style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<div class="container">
 <!--forside billede ------------------------------>
 	<img src="img/Screenshot 2024-12-03 171841.png" class="frontimg" alt="frontpage image"/>
 
 <!--Navigation----------------------------------->
-	<nav>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="#Title2">Title2</a></li>
-			<li><a href="history.html">History</a></li>
-			<li><a href="#About">About</a></li>
-		</ul>
-	</nav>
-	
+<nav>
+	<input id="menu-active" type="checkbox">
+ 	<label class="menu-box" for="menu-active">
+ 		<div class="menu-icon"></div>	
+	</label>
+		
+	<ul class="menu">
+		<li><a href="index.html">Home</a></li>
+		<li><a href="#Title2">Title2</a></li>
+		<li><a href="history.html">History</a></li>
+		<li><a href="#About">About</a></li>
+		<li><a href="#footer-info">Contact</a></li>
+	</ul>
+</nav>
 <!--Overskrift/hovdeside-->	
 <header>
 	<h1>Start your own journey, Grow your company, Fight to the top of the industry </h1>
@@ -61,12 +69,14 @@
 	
 <!--Fodliste med kontakter og links------------------------>
 <footer>
-	<nav>
+	<section class="footer-info">
 		<li><h2>Contacts and info</h2></li>
 		<li>Have any questions? Feel free to ask them on our <a href="#Forum">Forum</a>.</li>
 		<li>Want to get in contact? Send a message on our social media or on email at <a href="mailto:support@greenheartgames.com">support@greenheartgames.com</a></li>
 		<br>
-		
+		<div class="footer-logos">
+			
+		</div>
 		
 <!--Udfyldningsform som kontakt---------------------------->
 		<li>Alternatively you can fill out the contact form below.</li>
@@ -76,35 +86,38 @@
 		
 	<!--Name fill out-------->
 		<div class="form-name-input">
-			<label for="contact-name">Name</label>
+			<label for="contact-name" class="form-label">Name</label>
+			<br>
 			<input type="text" class="input-text" id="contact-name" name="Name" placeholder="Your Name">
 		</div>
 		
 	<!--Email fill out------->
 		<div class="form-email-input">
-			<label for="contact-email">Email Address </label>
+			<label for="contact-email" class="form-label">Email Address</label>
+			<br>
 			<input type="text" class="input-text" name="contact-email" id="contact-email" placeholder="Your Email Address">
 		</div>
 		
 	<!--message content--------->
 		<div class="form-msg-input">
-			<label for="contact-form-msg">Message</label>
-			<textarea type="text" class="input-msg" name="contact-msg" id="contact-msg" placeholder="Type your message here"></textarea>
+			<label for="contact-form-msg" class="form-label"></label>
+			<textarea type="text" class="input-text" name="contact-msg" id="contact-msg" placeholder="Type your message here"></textarea>
 		</div>
 		<div class="form-response"></div>
 		
 	<!--Submit button-------------->
 		<div class="form-submit">
 			<button class="submit-button" type="submit" value="submit">
+			Submit
 			</button>
 		</div>
 		
 	</form>
 		
-	</nav>
+	</section>
 </footer>
 	<br>
 	
-		
+</div> 			
 </body>
 </html>
