--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 	<img src="img/Screenshot 2024-12-03 171841.png" class="frontimg" alt="frontpage image"/>
 
 <!--Navigation----------------------------------->
-<nav>
+<nav class="navbar">
 	<input id="menu-active" type="checkbox">
  	<label class="menu-box" for="menu-active">
- 		<div class="menu-icon"></div>	
+ 		<div class="line1"></div>	
+		<div class="line2"></div>	
+		<div class="line3"></div>	
 	</label>
 		
 	<ul class="menu">
