--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
 		<div class="line2"></div>	
 		<div class="line3"></div>	
 	</label>
-		
+	
 	<ul class="menu">
 		<li><a href="index.html">Home</a></li>
-		<li><a href="#Title2">Title2</a></li>
+		<li><a href="#Title2">Guide</a></li>
 		<li><a href="history.html">History</a></li>
 		<li><a href="#About">About</a></li>
-		<li><a href="#footer-info">Contact</a></li>
+		<li><a href="#contactinfo">Contact</a></li>
 	</ul>
+	<form class="search-form">
+		<input type="text" placeholder="Search...">
+		<button type="submit">Search</button>
+	</form>
+	
 </nav>
 <!--Overskrift/hovdeside-->	
 <header>
@@ -71,6 +76,7 @@
 	
 <!--Fodliste med kontakter og links------------------------>
 <footer>
+	<div id="contactinfo"></div>
 	<section class="footer-info">
 		<li><h2>Contacts and info</h2></li>
 		<li>Have any questions? Feel free to ask them on our <a href="#Forum">Forum</a>.</li>
