--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<img src="img/Screenshot 2024-12-03 171841.png" class="frontimg" alt="frontpage image"/>
 
 <!--Navigation----------------------------------->
-<nav class="navbar">
+<nav class="navbar" id="navbar">
 	<input id="menu-active" type="checkbox">
  	<label class="menu-box" for="menu-active">
  		<div class="line1"></div>	
@@ -35,46 +35,58 @@
 	</form>
 	
 </nav>
-<!--Overskrift/hovdeside-->	
-<header>
+	
+	
+<!--Overskrift/hovdeside-------------------------------------->	
+<section class="Title-sec">
+	<header>
 	<h1>Start your own journey, Grow your company, Fight to the top of the industry </h1>
 	<p>Start your own studio, research the technologies, grow your community, make games your way - learn, grow and compete against time to reach the top and become leader of the market. Can you handle the pressure of it all or will you take the fall into bankruptcy? </p>
-</header>
+	</header>
+</section>	
 	
 	<br>
 <main>
-<div class="whatis">
-	<h2>What is GameDev Tycoon?	</h2>
-	<p>The Game GameDev Tycoon, is a game about starting your own company in the 80s gaming industry, learn the history of platforms while you research new technologies for your development. Experiment with genres, target audience and learn how to priorities elements in your games.  </p>
-</div>
+<section class="whatis-sec">
+	<div class="whatis">
+		<h2 id="whatis-title">What is GameDev Tycoon?</h2>
+		<p>The Game GameDev Tycoon, is a game about starting your own company in the 80s gaming industry, learn the history of platforms while you research new technologies for your development. Experiment with genres, target audience and learn how to priorities elements in your games.  </p>
+	</div>
+</section>
 <div class="whatis2">
 	<p>Expand your company by hiring employees. Manage your team and control the flow of creation as a tough boss or a sympathetic one.
 	As time and history progress you learn more about what type of games works well, while you try and grow to the top and make the best games of all.  </p>	
 </div>
-<!--Buttons for downloading------------------------------->
 	
-<!--Computer -->
-<section class="playnow">
-	<button class="play" href="http://www.greenheartgames.com/game-dev-tycoon-downloads/">
+<!--Buttons for downloading------------------------------->
+<br>
+<div class="container2">
+	<img src="img/2123.jpg" class="playimg" id="playimg" alt="play-img" />	
+	
+	<!--Computer -->
+	<button class="play-button" href="http://www.greenheartgames.com/game-dev-tycoon-downloads/">
 		<h3>Play Now on PC/Mac/Linux</h3>
 	</button>
 	
-<!--Android-->	
+	<!--Android-->	
 	<button class="android" href="https://play.google.com/store/apps/details?id=com.greenheartgames.gdt">
-		<img src="img/Google_Play_Store_badge_EN.svg.png" width="200" alt="Google play logo"/>
+		<img src="img/Google_Play_Store_badge_EN.svg.png" width="204" height="67px" alt="Google play logo"/>
 	</button>
 	
-<!--Apple store -->	
+	<!--Apple store -->	
 	<button class="iOS" href="https://itunes.apple.com/us/app/game-dev-tycoon/id1162580001?ls=1&mt=8">
 		<img src="img/app-store-badge.svg" width="200px" alt="Appstore logo"/>
 	</button>
+</div>		
 	
-
-</section>
+<br>
+<section>
 	<button class="how">	<h3>How to Play</h3>	</button>
+</section>
 </main>
-	
+
 <!--Fodliste med kontakter og links------------------------>
+<hr>	
 <footer>
 	<div id="contactinfo"></div>
 	<section class="footer-info">
