--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	
 	<ul class="menu">
 		<li><a href="index.html">Home</a></li>
-		<li><a href="#Title2">Guide</a></li>
-		<li><a href="history.html">History</a></li>
-		<li><a href="#About">About</a></li>
+		<li><a href="guideindex.html">Guide</a></li>
+		<li><a href="historyindex.html">History</a></li>
+		<li><a href="aboutindex.html">About</a></li>
 		<li><a href="#contactinfo">Contact</a></li>
 	</ul>
 	<form class="search-form">
@@ -38,25 +38,25 @@
 	
 	
 <!--Overskrift/hovdeside-------------------------------------->	
-<section class="Title-sec">
-	<header>
+
+<header class="header-title">
 	<h1>Start your own journey, Grow your company, Fight to the top of the industry </h1>
 	<p>Start your own studio, research the technologies, grow your community, make games your way - learn, grow and compete against time to reach the top and become leader of the market. Can you handle the pressure of it all or will you take the fall into bankruptcy? </p>
-	</header>
-</section>	
+</header>	
 	
 	<br>
 <main>
-<section class="whatis-sec">
-	<div class="whatis">
+<section class="whatis">
+	<div class="whatis-text" id="whatis-text">
 		<h2 id="whatis-title">What is GameDev Tycoon?</h2>
 		<p>The Game GameDev Tycoon, is a game about starting your own company in the 80s gaming industry, learn the history of platforms while you research new technologies for your development. Experiment with genres, target audience and learn how to priorities elements in your games.  </p>
 	</div>
+
+	<div class="whatis-text2" id="whatis-text2">
+		<p>Expand your company by hiring employees. Manage your team and control the flow of creation as a tough boss or a sympathetic one.
+		As time and history progress you learn more about what type of games works well, while you try and grow to the top and make the best games of all.  </p>	
+	</div>
 </section>
-<div class="whatis2">
-	<p>Expand your company by hiring employees. Manage your team and control the flow of creation as a tough boss or a sympathetic one.
-	As time and history progress you learn more about what type of games works well, while you try and grow to the top and make the best games of all.  </p>	
-</div>
 	
 <!--Buttons for downloading------------------------------->
 <br>
