--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="guideindex.html">Guide</a></li>
 		<li><a href="historyindex.html">History</a></li>
-		<li><a href="aboutindex.html">About</a></li>
+		<li><a href="about-index.html">About</a></li>
 		<li><a href="#contactinfo">Contact</a></li>
 	</ul>
 	<form class="search-form">
