--- a/about/about-index.html
+++ b/about/about-index.html
@@ -2,20 +2,17 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<!--Der indsættes en ny meta tag med viewport-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
-<title>aboutindex</title>
-<link href="aboutstyle.css" rel="stylesheet" type="text/css">
+<title>about-index</title>
+<link href="about-style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	
 <div class="container">
 <!--forside billede ------------------------------>
 	<img src="img/Screenshot 2024-12-03 171841.png" class="frontimg" alt="frontpage image"/>
-
-<!--Navigation----------------------------------->
+<!----------------------------------------------------------->	
+<!--Navigation----------------------------------------------->
+<br>
 <nav class="navbar" id="navbar">
 	<input id="menu-active" type="checkbox">
  	<label class="menu-box" for="menu-active">
@@ -28,7 +25,7 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="guideindex.html">Guide</a></li>
 		<li><a href="historyindex.html">History</a></li>
-		<li><a href="aboutindex.html">About</a></li>
+		<li id="about-title"><a href="aboutindex.html">About</a></li>
 		<li><a href="#contactinfo">Contact</a></li>
 	</ul>
 	<form class="search-form">
@@ -37,24 +34,29 @@
 	</form>
 	
 </nav>
-<!--------------------------------------------------------->
 	
 	
+<!--about section------------------------------------------>
+<section class="GH-who">
 	
+<h1>Greenheart Games Pty. Ltd.</h1>
+	<p>We are Greenheart Games, a small indie team working 		remotely from all over the world. We value the player’s time and intelligence and believe that games need to be more than thinly-disguised slot machines optimized solely to generate profit. We made Game Dev Tycoon and you might have heard about our piracy experiment when it went viral. Our newest project is Tavern Keeper, a fantasy tavern simulator that aims to combine tycoon/sim/management gameplay with a fun and funny setting.</p>
+</section>	
+<section class="GH-tycoon">
+	<img src="../img/logo.png" alt="gamedev tycoon logo" class="GH-tycoon-logo"/>
+	<h2>GameDev Tycoon</h2>
+	<p>Our first game to test the waters was Game Dev Tycoon, a business simulation game where you start your own game development company in the 80’s. Game Dev Tycoon was inspired by Game Dev Story (by Kairosoft), which was the first ‘tycoon’ game we enjoyed playing on the iPhone; however, from the start, we wished the game would work and look differently. We wanted a game development simulation which would be less random, more about your choices and a little more realistic. We began working on what would become Game Dev Tycoon in 2011 and created the concepts and game mechanics as well as the game itself from scratch.</p>
+</section>
 	
-<!--------------------------------------------------------->	
 <!--Fodliste med kontakter og links------------------------>
 <hr>	
-<footer>
+<footer class="footer">
 	<div id="contactinfo"></div>
 	<section class="footer-info">
 		<li><h2>Contacts and info</h2></li>
 		<li>Have any questions? Feel free to ask them on our <a href="#Forum">Forum</a>.</li>
 		<li>Want to get in contact? Send a message on our social media or on email at <a href="mailto:support@greenheartgames.com">support@greenheartgames.com</a></li>
 		<br>
-		<div class="footer-logos">
-			
-		</div>
 		
 <!--Udfyldningsform som kontakt---------------------------->
 		<li>Alternatively you can fill out the contact form below.</li>
@@ -94,9 +96,10 @@
 		
 	</section>
 </footer>
-	<br>
+	<br> <hr>	
 	
-
+	
 </div>
+	
 </body>
 </html>
