--- a/about/about-index.html
+++ b/about/about-index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>about-index</title>
 <link href="about-style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+<!--div container for alt indhold-->
 <div class="container">
-<!--forside billede ------------------------------>
+<!--forside billede ---------------------------------------->
 	<img src="img/Screenshot 2024-12-03 171841.png" class="frontimg" alt="frontpage image"/>
+	
 <!----------------------------------------------------------->	
 <!--Navigation----------------------------------------------->
-<br>
 <nav class="navbar" id="navbar">
 	<input id="menu-active" type="checkbox">
  	<label class="menu-box" for="menu-active">
@@ -91,9 +93,7 @@
 			Submit
 			</button>
 		</div>
-		
 	</form>
-		
 	</section>
 </footer>
 	<br> <hr>	
