--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <div class="container">
 <!--forside billede ------------------------------>
 	<img src="img/Screenshot 2024-12-03 171841.png" class="frontimg" alt="frontpage image"/>
-
-<!--Navigation----------------------------------->
+	
+<!---------------------------------------------------------->
+<!--Navigation---------------------------------------------->
 <nav class="navbar" id="navbar">
 	<input id="menu-active" type="checkbox">
  	<label class="menu-box" for="menu-active">
@@ -23,7 +24,7 @@
 	</label>
 	
 	<ul class="menu">
-		<li><a href="index.html">Home</a></li>
+		<li id="home-title"><a href="index.html">Home</a></li>
 		<li><a href="guideindex.html">Guide</a></li>
 		<li><a href="historyindex.html">History</a></li>
 		<li><a href="about-index.html">About</a></li>
@@ -36,11 +37,11 @@
 	
 </nav>
 	
-	
-<!--Overskrift/hovdeside-------------------------------------->	
 
+<!------------------------------------------------------------>
+<!--Overskrift/hovdeside-------------------------------------->	
 <header class="header-title">
-	<h1>Start your own journey, Grow your company, Fight to the top of the industry </h1>
+	<h1>Start your journey, Grow your company, Fight to the top of the industry </h1>
 	<p>Start your own studio, research the technologies, grow your community, make games your way - learn, grow and compete against time to reach the top and become leader of the market. Can you handle the pressure of it all or will you take the fall into bankruptcy? </p>
 </header>	
 	
