--- a/Guide/guideindex.html
+++ b/Guide/guideindex.html
@@ -57,15 +57,6 @@
 			<p>Your content goes here...</p>
 		</div>
 	
-		<div class="newsnav">
-			<p>GameDev Tycoon is now available on Netflix!</p>
-		<hr>
-			<p>GameDev Tycoon is now available on Nintendo Switch!</p>
-		<hr>
-			<p>GameDev Tycoon is now available on Google Play!</p>
-		<hr>
-		</div>
-	
 		<div class="about1" id="intronav">
 			<h1>GameDev Tycoon - An Introduction</h1>
 			<p>Game Dev Tycoon is a business simulation game where you replay the history of the gaming industry by starting your own video game development company in the 80s. Create best selling games. Research new technologies and invent new game types. Become the leader of the market and gain worldwide fans.</p>
@@ -99,10 +90,11 @@
 <!------>
 	<section class="Guide" id="guidenav">
 		<div class="begin-guide">
-			
+			<h2>A guide to the Game</h2>
+			<p></p>
 		</div>
 	</section>
-<!------>
+<!--play now-------------------------->
 	<section class="playnow">
 		<div class="container2">
 			<img src="img/2123.jpg" class="playimg" id="playimg" alt="play-img" />	
