--- a/about/about-index.html
+++ b/about/about-index.html
@@ -49,6 +49,10 @@
 	<h2>GameDev Tycoon</h2>
 	<p>Our first game to test the waters was Game Dev Tycoon, a business simulation game where you start your own game development company in the 80’s. Game Dev Tycoon was inspired by Game Dev Story (by Kairosoft), which was the first ‘tycoon’ game we enjoyed playing on the iPhone; however, from the start, we wished the game would work and look differently. We wanted a game development simulation which would be less random, more about your choices and a little more realistic. We began working on what would become Game Dev Tycoon in 2011 and created the concepts and game mechanics as well as the game itself from scratch.</p>
 </section>
+<section class="revenue">
+	<h1>Gameplay over revenue</h1>
+	<p>We love simulation games and we also strongly believe that games need to be more than dressed up slot machines. That’s why we are proud to say that Game Dev Tycoon was designed as a fun game and not as a revenue extraction platform. Game Dev Tycoon focuses on a casual single player experience – there are no forced wait-times, no virtual coins, no in-app purchases, no ad-breaks, no loot boxes and no overly addictive gameplay mechanics. We don’t care about player retention or average player revenue, nor do we want to catch whales. All we care is that you enjoy the game for as long as you want to. In exchange, we ask for a small upfront fee because your support is the only factor keeping us in business. If you like what we are doing and want to support us further, please take a look at this page.</p>
+</section>
 	
 <!--Fodliste med kontakter og links------------------------>
 <hr>	
