--- a/about/about-index.html
+++ b/about/about-index.html
@@ -24,10 +24,10 @@
 	</label>
 	
 	<ul class="menu">
-		<li><a href="index.html">Home</a></li>
+		<li id="home-title"><a href="index.html">Home</a></li>
 		<li><a href="guideindex.html">Guide</a></li>
 		<li><a href="historyindex.html">History</a></li>
-		<li id="about-title"><a href="aboutindex.html">About</a></li>
+		<li><a href="about-index.html">About</a></li>
 		<li><a href="#contactinfo">Contact</a></li>
 	</ul>
 	<form class="search-form">
