--- a/Guide/guideindex.html
+++ b/Guide/guideindex.html
@@ -32,7 +32,7 @@
 	
 	<ul class="menu">
 		<li id="home-title"><a href="index.html">Home</a></li>
-		<li><a href="https://twintailsprojects.com/GameDevTycoon-Exam/guides/">Guide</a></li>
+		<li><a href="guideindex.html">Guide</a></li>
 		<li><a href="historyindex.html">History</a></li>
 		<li><a href="about-index.html">About</a></li>
 		<li><a href="#contactinfo">Contact</a></li>
