--- a/history/History-index.html
+++ b/history/History-index.html
@@ -2,10 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-	<!--Der indsættes en ny meta tag med viewport-->
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>exam2024</title>
-<link href="Style.css" rel="stylesheet" type="text/css">
+<title>History-index</title>
+<link href="history-style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -37,58 +35,30 @@
 	
 </nav>
 	
-
+<!--aside menu---------------------------------------------->
+<div class="sidenav" id="sidenav" > 
+	<li><a href="#topnav">Back to Top</a> </li>
+	<li><a href="#industry">The Gaming Industry</a> </li>
+	<li><a href="#platforms">Evolution of Platforms</a> </li>
+	<li><a href="#gamesevo">How Games have Evolved</a> </li>
+</div> 
+	
 <!------------------------------------------------------------>
 <!--Overskrift/hovdeside-------------------------------------->	
-<header class="header-title">
-	<h1>Start Your Game Developer Journey Today</h1>
-	<h2>Create games your way, Grow your company, Fight to the top of the industry. </h2>
-	<p>Start your own studio, research the technologies, grow your community, make games your way - learn, grow and compete against time to reach the top and become leader of the market. Can you handle the pressure of it all or will you take the fall into bankruptcy? </p>
-</header>	
-	<br>
+<br>
 <main>
-<section class="news">
-	
-</section>
-<section class="whatis">
-	<div class="whatis-text" id="whatis-text">
-		<h2 id="whatis-title">What is GameDev Tycoon?</h2>
-		<p>The Game GameDev Tycoon, is a game about starting your own company in the 80s gaming industry, learn the history of platforms while you research new technologies for your development. Experiment with genres, target audience and learn how to priorities elements in your games.  </p>
-		<p>Expand your company by hiring employees. Manage your team and control the flow of creation as a tough boss or a sympathetic one.
-		As time and history progress you learn more about what type of games works well, while you try and grow to the top and make the best games of all.  </p>	
-	</div>
-</section>
-	
-<!--Buttons for downloading------------------------------->
-<br>
-<div class="container2">
-	<img src="img/2123.jpg" class="playimg" id="playimg" alt="play-img" />	
-	
-	<!--Computer -->
-	<button class="play-button" href="http://www.greenheartgames.com/game-dev-tycoon-downloads/">
-		<h3>Play Now on PC/Mac/Linux</h3>
-	</button>
-	
-	<!--Android-->	
-	<button class="android" href="https://play.google.com/store/apps/details?id=com.greenheartgames.gdt">
-		<img src="img/Google_Play_Store_badge_EN.svg.png" width="204" height="67px" alt="Google play logo"/>
-	</button>
-	
-	<!--Apple store -->	
-	<button class="iOS" href="https://itunes.apple.com/us/app/game-dev-tycoon/id1162580001?ls=1&mt=8">
-		<img src="img/app-store-badge.svg" width="200px" alt="Appstore logo"/>
-	</button>
-</div>		
-	
-<br>
-<!------------------------------------------------->
-<section>
-	<button class="how" href="guideindex.html">	
-		<h3>How to Play</h3>	
-	</button>
-</section>
+	<header class="header-title">
+		<h1>The History of Gaming</h1>
+		<div class="industry">
+			<h2 id="industry">History of The Gaming Industry</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, placeat, esse. Excepturi labore saepe temporibus illum sunt, molestias numquam cupiditate id ipsa dolorum. Alias consequatur eaque impedit, placeat dicta numquam sequi a iusto atque magni, eos vitae quasi, culpa eius quam. Nulla dolor distinctio, saepe voluptatem sit nisi excepturi itaque doloremque beatae ipsam in odio minus, aliquam eligendi veritatis corporis. Quod animi molestias deserunt odit, accusantium delectus, error, aliquam voluptas cum est neque dolorum. Error, quod vitae excepturi fugiat dolor, mollitia unde odit deleniti eum pariatur vero similique laborum quaerat aliquid placeat facilis eius ipsa debitis cum in molestias adipisci aut enim. At provident, perspiciatis quia facilis eaque veniam dolore, corporis natus temporibus porro consectetur fuga sint iste debitis, voluptates dolorum nesciunt odio earum reiciendis facere maxime suscipit aliquam praesentium pariatur. Repudiandae ratione sit, suscipit culpa. Cumque quis sunt itaque earum at sequi id velit nobis nostrum modi, eligendi ad aut iste sit, ea in molestias! Repellendus magni ea ut esse sequi ipsa magnam sed. Necessitatibus minima consequuntur quos voluptate est, omnis dicta aliquam maiores. Veritatis, necessitatibus? Itaque, voluptatum. Hic quas, unde repellat soluta incidunt fugit minima eaque nemo id adipisci consequuntur ducimus, dolor molestiae nesciunt, doloribus vero, voluptate labore.</p>
+		</div>
+		
+	</header>	
 </main>
-
+<br>
+	
+	
 <!--Fodliste med kontakter og links------------------------>
 <hr>	
 <footer>
