--- a/about/about-index.html
+++ b/about/about-index.html
@@ -25,10 +25,10 @@
 	
 	<ul class="menu">
 		<li id="home-title"><a href="index.html">Home</a></li>
-		<li><a href="guideindex.html">Guide</a></li>
-		<li><a href="historyindex.html">History</a></li>
-		<li><a href="about-index.html">About</a></li>
-		<li><a href="#contactinfo">Contact</a></li>
+		<li id="guide-title"><a href="guideindex.html">Guide</a></li>
+		<li id="history-title"><a href="historyindex.html">History</a></li>
+		<li id="about-title"><a href="about-index.html">About</a></li>
+		<li id="contact-title"><a href="#contactinfo">Contact</a></li>
 	</ul>
 	<form class="search-form">
 		<input type="text" placeholder="Search...">
